--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
 .header{
     background-image: url('images/mushroom.jpg');
+    background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    height: 200px;
+}
+.header{
     height: 200px;
 }
 .company{
@@ -9,10 +13,10 @@
     padding-top: 18px;
     float: right;
 }
-@media (min-width: 768px) { 
-    .company{
-        width: 45%;
-    }
+.company_name{
+    font-size: 40px;
+    font-family: cursive;
+    color: chocolate;
 }
 .jlogocontainer{
     display: inline-block;
@@ -21,11 +25,6 @@
     padding-top: 3px;
     background-color: #a84d83;
     border-radius: 9px;
-}
-.company_name{
-    font-size: 40px;
-    font-family: cursive;
-    color: chocolate;
 }
 .jlogo{
     color: #a84d83;
@@ -46,6 +45,93 @@
     font-weight: bold;
     text-align: center;
 }
+
+@media (min-width: 768px) { 
+    .header{
+        height: 100px;
+    }
+    .company{
+        width: 45%;
+        padding-top: 3px;
+        text-align: center;
+        float: right;
+    }
+    .company_name{
+        font-size: 21px;
+        font-family: cursive;
+        color: chocolate;
+    }
+    .jlogocontainer{
+        display: inline-block;
+        width: 46px;
+        height: 60px;
+        padding-top: 1px;
+        background-color: #a84d83;
+        border-radius: 9px;
+    }
+    .jlogo{
+        color: #a84d83;
+        background: #f5f0f0;
+        border-radius: 50%;
+        height: 39px;
+        width: 28px;
+        font-size: 23px;
+        text-align: center;
+        padding-left: 5px;
+        margin-top: 3px;
+        margin-left: 9px
+    }
+    .jtype{
+        font-size: 13px;
+        font-family: ui-monospace;
+        color: #f5f0f0;
+        font-weight: bold;
+        text-align: center;
+    }
+}
+@media (min-width: 992px) {
+    .header{
+        height: 200px;
+    }
+    .company{
+        text-align: center;
+        padding-top: 18px;
+        float: right;
+    }
+    .company_name{
+        font-size: 40px;
+        font-family: cursive;
+        color: chocolate;
+    }
+    .jlogocontainer{
+        display: inline-block;
+        width: 79px;
+        height: 102px;
+        padding-top: 3px;
+        background-color: #a84d83;
+        border-radius: 9px;
+    }
+    .jlogo{
+        color: #a84d83;
+        background: #f5f0f0;
+        border-radius: 50%;
+        height: 68px;
+        width: 55px;
+        font-size: 42px;
+        text-align: center;
+        padding-left: 8px;
+        margin-top: 3px;
+        margin-left: 11px;
+    }
+    .jtype{
+        font-size: 22px;
+        font-family: ui-monospace;
+        color: #f5f0f0;
+        font-weight: bold;
+        text-align: center;
+    }
+}
+
 .navbar-brand,.nav-item{
     font-size: 1rem;
 }
