--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 .header{
     background-image: url('images/mushroom.jpg');
-    background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 100% 100%;
     height: 100px;
@@ -43,6 +42,38 @@
     font-weight: bold;
     text-align: center;
 }
+.navbar{
+    padding: 0rem 1rem;
+    background-color: #ca9863;
+}
+.navbar-brand,.nav-item{
+    font-size: 0.8rem;
+}
+.navbar-toggler-icon{
+    width: 0.8em;
+    height: 0.8em;
+}
+.product_container{
+    text-align: center;
+    background-color: lightgoldenrodyellow;
+    border-radius: 24px;
+    padding: 5px;
+    border: solid 4px #d0b997;
+    margin-top: 10px;
+}
+.product_image{
+    height: 150px;
+    width: 150px;
+    border-radius: 92px;
+    border-left: #a84d83 solid 3px;
+    border-top: #2196F3 solid 3px;
+    border-right: #a84d83 solid 3px;
+    border-bottom: #2196F3 solid 3px;
+}
+.product_descrip{
+    font-family: sans-serif;
+    color: #a84d83;
+}
 @media (min-width: 768px) {
     .header{
         height: 200px;
@@ -84,12 +115,14 @@
         font-weight: bold;
         text-align: center;
     }
-}
-
-.navbar-brand,.nav-item{
-    font-size: 1rem;
-}
-.navbar-toggler-icon{
-    width: 1em;
-    height: 1em;
+    .navbar{
+        padding: .5rem 1rem;
+    }
+    .navbar-brand,.nav-item{
+        font-size: 1rem;
+    }
+    .navbar-toggler-icon{
+        width: 1em;
+        height: 1em;
+    }
 }
